ACCUMULO-3005 Rebase monitor webapp onto master
* Rebase Josh's work in creating a rest webapp for the monitor onto master